--- a/colorGame.css
+++ b/colorGame.css
@@ -8,12 +8,14 @@ body {
     width: 30%;
     background: purple;
     padding-bottom: 30%;
-    float: left;
+    /* display: inline-block; */
+    float: left; 
     margin: 1.66%;
     border-radius: 55%;
     transition: background 0.6s;
     --webkit-transition: background 0.6s;
     --moz-transition: background 0.6s;
+   
 }
 
 #container {
